 (Format: Year/Month/Day)
Changes for 1.0rc2:
*06/06/25:
   * Fix crash when unable to convert between local and utf-8 encodings (Simon)
     FbTk/FbString.cc
   * Fix DetachClient key command so new window is visible (Mark)
     Window.cc
*06/06/24:
   * Make Urgency Hint flash the correct tab in a group (Mark)
     Ewmh.cc Window.cc/hh WinClient.cc/hh FbWinFrame.cc/hh IconbarTool.cc
     AttentionNoticeHandler.cc/hh
   * Fix some more X-errors (Simon)
     - window was resized, triggering background re-render, but 
       background is invalid sometimes (during reconfiguring)
     Container.hh/cc FbWinFrame.cc FbTk/FbWindow.hh/cc FbTk/TextButton.cc
   * Fix bug #1362463, menu selection pixmaps disappear (Simon)
     - pixmap from image cache was put into FbPixmap, which freed it.
     FbTk/...  FbPixmap.hh/cc MenuTheme.hh Menu.cc
*06/06/23:
   * Make startfluxbox aware of --program-prefix and --program-suffix (Mark)
     configure.in util/Makefile.am util/startfluxbox.in
*06/06/22:
   * new Resource: session.modKey: <modkey> (thanks Jim Ramsay i dot am at jimramsay dot com)
     new Command: SetModKey <modkey>
     eg: session.modKey: Mod4   allows to use the winkey to resize and move
     windows and have Mod1 (Alt) free for using blender or Maya.
     FbCommands.cc Window.cc fluxbox.hh FbCommandFactory.cc FbCommands.hh fluxbox.cc
     doc/fluxbox.1.in
*06/06/21:
   * Fix de_DE translation (thanks Michael Bueker)
   * Fix nls (Simon)
     - file location was wrong. nls wouldn't have worked, why did no-one say? 
     - Messages output on stdout/err now properly in local encoding
     - Check for existence of catalog file, if it doesn't exist, and we can
       convert from UTF-8, try loading that one instead.
     - bunch of files changed due to macro name change:
       + Use _FB_XTEXT if the text will go out to X (for X fonts)
       + Use _FB_CONSOLETEXT if the text will go to console (stdout/err)