@@ -23,7 +23,10 @@
 #ifndef MENUCREATOR_HH
 #define MENUCREATOR_HH
 
+#include "FbTk/FbString.hh"
+
 #include <string>
+#include <list>
 
 namespace FbTk {
 class Menu;
@@ -43,6 +46,26 @@ public:
                                          bool require_begin);
     static bool createWindowMenuItem(const std::string &type, const std::string &label, 
                                      FbTk::Menu &inject_into);
+
+    /**
+     * Encoding-related helpers (encoding, aka codeset)
+     */
+
+    // Files are guaranteed to be "balanced", unlike user-created [encoding] tags.
+    static void startFile();
+    static void endFile();
+
+    static void startEncoding(const std::string &encoding);
+    static void endEncoding();
+
+private:
+    // stack of encodings
+    static std::list<std::string> encoding_stack;
+    // stack of ints, representing stack size as each file is entered
+    // (a file should never end more encodings than it starts)
+    static std::list<size_t> stacksize_stack;
+
+    static FbTk::StringConvertor m_stringconvertor;
 
 };
 
